# mamba_for_sequence_classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: README.md  inference_example.ipynb  train_finacial_phrasebank_ray_pbt.py  train_mamba_imdb.py
src/: hf_mamba_classification.py
src/MambaForSequenceClassification.egg-info/: SOURCES.txt  requires.txt  top_level.txt
